// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image with simple srcset options simple image 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-120.png 120w, test-180.png 180w, test-320.png 320w\\"
      src=\\"test-640.png\\"
    />
  </body>
</html>
"
`;

exports[`image with simple srcset options simple image with only one value 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w\\"
      src=\\"test-640.png\\"
    />
  </body>
</html>
"
`;

exports[`image with simple srcset options simple image with values duplicates 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w\\"
      src=\\"test-640.png\\"
    />
  </body>
</html>
"
`;

exports[`image with simple srcset options simple image with width inferior to all values 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-400.png 400w\\"
      src=\\"test-640.png\\"
      width=\\"400\\"
    />
  </body>
</html>
"
`;

exports[`image with simple srcset options simple image with width inferior to one value 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w, test-800.png 800w, test-1024.png 1024w\\"
      src=\\"test-640.png\\"
      width=\\"1024\\"
    />
  </body>
</html>
"
`;

exports[`image with simple srcset options simple image with width superior to all values 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w, test-640.png 640w, test-1024.png 1024w\\"
      src=\\"test-640.png\\"
      width=\\"1280\\"
    />
  </body>
</html>
"
`;
